2004-04-06  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/text-item.cc (interpret_markup): whoops, variable
	shadowing fixed.

2004-04-06  Michael Welsh Duggan  <mwd@sei.cmu.edu>

	* lily/piano-pedal-performer.cc (try_music): Compare symbols to
	symbols, not symbols to strings.
	* lily/piano-pedal-engraver.cc (try_music): Compare symbols to
	symbols, not symbols to strings.

2004-04-06  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/kpath.cc (kpathsea_gulp_file_to_string): 
	(ly:kpathsea-gulp-file): New function.

	* scm/encoding.scm (read-encoding-file): Use it.

2004-04-06  Werner Lemberg  <wl@gnu.org>

	* scm/encoding.scm (coding-alist): Fix typo.

2004-04-06  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/scaled-font-metric.cc (text_dimension): move function from
	Font_metric
	(make_scaled_font_metric): init coding_scheme_ to TeX
	(text_dimension): use get-coding-vector for non TeX coding_scheme_

	* lily/include/scaled-font-metric.hh (struct
	Modified_font_metric): rename from Scaled_font_metric

	* scm/encoding.scm (read-encoding-file): split up large function,
	leave caching to (delay)

	* lily/lily-guile.cc (LY_DEFINE): typecheck argument.

2004-04-05  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/my-lily-lexer.cc (set_encoding): New method.

	* lily/lexer.ll: Grok \encoding.

	* lily/font-metric.cc (get_encoded_index): New function.

	* lily/include/font-metric.hh (coding_scheme): New method.

	* scm/encoding.scm: New file.

	* mf/feta-beugel.mf: Better error message (WAS: `foobar').

2004-04-05  Werner Lemberg  <wl@gnu.org>

	* Documentation/user/tutorial.itely: Revised (finished).

	* Documentation/user/macros.itexi (@separate): Removed.

2004-04-05  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* scm/output-ps.scm (define-fonts): fix scaling.

	* lily/scaled-font-metric.cc (design_size): add function.

	* lily/font-metric.cc (LY_DEFINE): opps ly:font-design-size is only
	partial cut&paste of ly:font-magnification.
