@@ -30,24 +30,22 @@ public:
 
   virtual int name_to_index (String) const;
   virtual int count () const;
+  virtual int index_to_ascii (int) const;
   virtual Box get_ascii_char (int) const;
   virtual Box get_indexed_char (int) const;
   virtual Offset get_indexed_wxwy (int) const;
   virtual String coding_scheme () const;
-  
-  AFM_CharMetricInfo const *find_char_metric (String name) const;
-  AFM_CharMetricInfo const *find_ascii_metric (int) const;  
-
-  String to_string () const;
   static SCM make_afm (AFM_Font_info*, unsigned, Real);
   virtual Real design_size () const;
 
 protected:
+  AFM_CharMetricInfo const *find_char_metric (String name) const;
+  AFM_CharMetricInfo const *find_ascii_metric (int) const;  
+
   Array<int> ascii_to_metric_idx_;
   std::map<String,int> name_to_metric_dict_;
 
   Adobe_font_metric (AFM_Font_info*);
-  virtual Stencil find_by_name (String) const;
 };
 
 SCM read_afm_file (String);
