@@ -19,24 +19,30 @@ public:
   Box text_dimension (String);
   
   
-  virtual Stencil find_by_name (String) const;
-  static SCM make_scaled_font_metric (Font_metric*, Real);
+  static SCM make_scaled_font_metric (SCM, Font_metric*, Real);
   virtual int count () const;
   virtual Offset get_indexed_wxwy (int) const;
   virtual int name_to_index (String) const;
   virtual String coding_scheme () const;
 
+  /*should be protected?
+   */
+  SCM coding_vector_;
+  SCM coding_table_;
+  SCM coding_permutation_;
+  
 protected:
   virtual Real design_size () const;
   virtual void derived_mark (); 
-  virtual Box get_indexed_char (int)const;
+  virtual Box get_indexed_char (int) const;
+  virtual int index_to_ascii (int) const;
   virtual Box get_ascii_char (int) const;
   Font_metric *orig_;
   Real magnification_;
   String coding_scheme_;
-  SCM coding_vector_;
+
   
-  Modified_font_metric (Font_metric*, Real);
+  Modified_font_metric (String, Font_metric*, Real);
   Box tex_kludge (String) const;
 };
 
